@@ -5,6 +5,7 @@ Allow to select normal ZEsarUX logo or X Anniversary logo
 Menus can no longer be minimized (that had no sense)
 Added support for ZENG on curses driver
 Allow to save screen to .txt file
+Allow to seng ZENG snapshots more frequently (even every 20 ms)
 
 ----
 
